--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@stomp/stompjs": "^7.1.1",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "reflect-metadata": "^0.2.2",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.18",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
