--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.6.1",
     "reflect-metadata": "^0.2.2",
     "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.18",
     "typeorm": "^0.3.24"
   },
@@ -27,6 +28,7 @@
     "@types/node": "^22.15.21",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
